我的-基础页面的搭建 & labelTag-标签组件的抽取

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,11 +1,14 @@
 *{
-	box-sizing:border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 body{
 	touch-action: manipulation; /* IE11+ 禁止双击缩放，关于移动端300ms延迟：https://github.com/ftlabs/fastclick */  
     -ms-touch-action: manipulation; /* IE10+ 禁止双击缩放 */
     overflow-x: hidden;
 	font-family: "Microsoft YaHei", Arial, Helvetica, sans-serif, "\5B8B\4F53";
+	background: #f5f5f5;
 }
 a{
 	text-decoration: none;
