--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -1,6 +1,8 @@
 // 全局颜色（蓝色）
-$appColor = #5484ff
-$appColorRGB = 84,132,255
+$appColor = #369BFF
+$appColorRGB = 54,155,255
+$appBg = #f5f5f5
+$panelBg = #fff
 
 // px转换rem
 toRem($px) {
@@ -36,6 +38,19 @@ border-1px-top($color) {
         content: '';
     }
 }
+border-1px-left($color) {
+    position: relative;
+    &::after {
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 0;
+        height: 100%;
+        border-left: 1px solid $color;
+        content: '';
+    }
+}
 border-1px-bottom($color) {
     position: relative;
     &::after {
@@ -45,6 +60,19 @@ border-1px-bottom($color) {
         bottom: 0;
         width: 100%;
         border-top: 1px solid $color;
+        content: '';
+    }
+}
+border-1px-right($color) {
+    position: relative;
+    &::after {
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 0;
+        height: 100%;
+        border-right: 1px solid $color;
         content: '';
     }
 }
