添加路由跳转和字体图标

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -19,3 +19,11 @@ a{
 .mint-toast{
     z-index: 3000 !important;
 }
+
+[class*=" my-icon-"], [class^=my-icon-] {
+    font-family:"iconfont" !important;
+    font-size: inherit;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
