--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -3,6 +3,7 @@ $appColor = #369BFF
 $appColorRGB = 54,155,255
 $appBg = #f5f5f5
 $panelBg = #fff
+$borderColor = #e6e6e6
 
 // px转换rem
 toRem($px) {
