home主页面布局 & blockSlot和rankTop组件抽取

--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -77,3 +77,10 @@ border-1px-right($color) {
         content: '';
     }
 }
+
+// 文字单行不换行溢出使用省略号
+text-ellipsis() {
+    white-space: pre;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
