--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -16,7 +16,7 @@ a{
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-.mint-toast, .mint-indicator{
+.mint-toast, .mint-indicator-wrapper{
     z-index: 3000 !important;
 }
 
