--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -84,3 +84,11 @@ text-ellipsis() {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+// 多元素垂直居中
+flex-vertical-center() {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
