--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -69,7 +69,7 @@ border-1px-right($color) {
     &::after {
         display: block;
         position: absolute;
-        left: 0;
+        right: 0;
         top: 0;
         width: 0;
         height: 100%;
