--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -28,6 +28,20 @@ a{
     -moz-osx-font-smoothing: grayscale;
 }
 
+.bottomLoad{
+    width: 100%;
+    position: relative;
+}
+
+.bottomLoad div{
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 16px;
+    color: #999;
+}
+
 .bounce-enter-active {
   animation: bounce-in .2s;
 }
